# adaptive-agent-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml
adaptive_agent_mcp/: MANIFEST.in  __init__.py  server.py
adaptive_agent_mcp/src/: config.py  graph_store.py  indexer.py  lock_manager.py  memory_parser.py  search_engine.py  storage.py  vector_client.py  vector_store.py
adaptive_agent_mcp/src/tools/: graph.py  memory.py  retrieval.py  semantic.py  session.py
docs/: setup_local_model.md  使用场景示例.md  使用指南.md  快速开始.md  架构设计.md  记忆共享策略.md  配置决策指南.md
